Fix: Fixes wrong position of right slideout handler

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -648,10 +648,11 @@ img.disabled {
 	top: 16rem;
 }
 
-#localizationsTab,
-#elementsTab {
-	/*top: 22rem;*/
+#localizationsTab {
 	top: 10rem;
+}
+#elementsTab {
+	top: 22rem;
 }
 
 
